Documentation edits made through Mintlify web editor

--- a/guides/tiered-withdrawals.mdx
+++ b/guides/tiered-withdrawals.mdx
@@ -1,6 +1,7 @@
 ---
 title: "A new withdrawal mechanism: Transparent and fair monthly ATTN, according to your contribution. "
-description: "Today, we’re releasing a new way to withdraw.  This release note describes all changes and features added."
+description: "Today, we’re releasing a new way to withdraw.
+This release note describes all changes and features added."
 ---
 
 ### **Context**
@@ -13,14 +14,16 @@ When we hold and use attention, we strengthen the system. Over time, its price c
 
 Attention flows to the important information. It should also flow to the important people: The ones who create and invest, the ones who believe in Collective Memory and represent us out in the open world. This update introduces user tiers: Contribute more, earn more ATTN.
 
-Higher tiers can withdraw more ATTN each month. To go up the tiers:\\
+![Vector (2) 1 (1).png](/images/Vector\(2\)1\(1\).png)
+
+Higher tiers can withdraw more ATTN each month. To go up the tiers:
 
 - Create attention worthy memories. 
 - Stake in memories you think matter.
 - Add great people to the platform
 - Be consistent. Daily Activity helps you climb the tiers.
 
-Because withdrawals are in ATTN, growing the token’s value has a huge impact -  your withdrawals are worth more. 
+Because withdrawals are in ATTN, growing the token’s value has a huge impact -  your withdrawals are worth more.
 
 ### Collective Memory tiers: 
 
@@ -34,13 +37,14 @@ The tier system ensures that dedication and long-term support of the project is 
 
 The new ‘Top’ feed lets you see the top contributors to Collective Memory. The feed contains 500 top users, and will expand as the network grows. Also, ‘Favorites’ lets you see your favorite users’ content in one place.
 
-\<IMAGE\>
+![Component 1 (2).png](/images/Component1\(2\).png)
 
 ### What happens when you hold ATTN long term?
 
-In simple terms, the price of ATTN increases when liquidity is added to the token. When users, brands, and bots buy attention to spend in Collective Memory, liquidity increases. Today, in the infancy of Collective Memory, the Token has \$50K in liquidity. This has led to 9% appreciation since we launched. In our rapidly growing system, new entities are buying ATTN with dollars every day. What happens when ATTN has \$1 million in liquidity? Let’s simulate: 
-
-If you’re:\
+In simple terms, the price of ATTN increases when liquidity is added to the token. When users, brands, and bots buy attention to spend in Collective Memory, liquidity increases. Today, in the infancy of Collective Memory, the Token has \$50K in liquidity. This has led to 9% appreciation since we launched. In our rapidly growing system, new entities are buying ATTN with dollars every day. \
+\
+What happens when ATTN has \$1 million in liquidity? \
+Let’s simulate; If you’re:\
 An Elite Mapper, your 50K monthly ATTN is worth \$30,000. That’s \$360,000 a year. \
 A Pro Mapper, your 20K monthly ATTN is worth \$12,000. That’s \$144,000 a year. \
 A Top Mapper, your 10K monthly ATTN is worth \$6,000. That’s \$72,000 a year. \
