Documentation edits made through Mintlify web editor

--- a/guides/tiered-withdrawals.mdx
+++ b/guides/tiered-withdrawals.mdx
@@ -1,7 +1,6 @@
 ---
 title: "A new withdrawal mechanism: Transparent and fair monthly ATTN, according to your contribution. "
-description: "Today, we’re releasing a new way to withdraw.
-This release note describes all changes and features added."
+description: "Today, we’re releasing a new way to withdraw. This release note describes all changes and features added."
 ---
 
 ### **Context**
@@ -29,9 +28,9 @@ Because withdrawals are in ATTN, growing the token’s value has a huge impact -
 
 **Elite** **Mapper**: Top 20 users. 50K ATTN monthly withdrawals. Currently worth  \>\$500.\
 **Pro** **Mapper**: Top 50 users. 20K ATTN monthly withdrawals. Currently worth  \>\$200.\
-**Top** **Mapper**: Top 100 users. 10K ATTN monthly withdrawals.Currently worth  \>\$100.\
-**Solid** **Mapper**: Top 500 users. 1000 ATTN monthly withdrawals.Currently worth  \>\$10.\
-**Everyone** **else**: Top 1000 users: 500 ATTN monthly withdrawals.Currently worth  \>\$5.
+**Top** **Mapper**: Top 100 users. 10K ATTN monthly withdrawals. Currently worth  \>\$100.\
+**Solid** **Mapper**: Top 500 users. 1000 ATTN monthly withdrawals. Currently worth  \>\$10.\
+**Everyone** **else**: Top 1000 users: 500 ATTN monthly withdrawals. Currently worth  \>\$5.
 
 The tier system ensures that dedication and long-term support of the project is rewarded, as more people around the world enjoy Collective Memory. As we grow, More users will be included in each tier, ensuring a fair way for users to participate and benefit from the network.
 
@@ -43,7 +42,7 @@ The new ‘Top’ feed lets you see the top contributors to Collective Memory. T
 
 In simple terms, the price of ATTN increases when liquidity is added to the token. When users, brands, and bots buy attention to spend in Collective Memory, liquidity increases. Today, in the infancy of Collective Memory, the Token has \$50K in liquidity. This has led to 9% appreciation since we launched. In our rapidly growing system, new entities are buying ATTN with dollars every day. \
 \
-What happens when ATTN has \$1 million in liquidity? \
+What happens if ATTN has \$1 million in liquidity?\
 Let’s simulate; If you’re:\
 An Elite Mapper, your 50K monthly ATTN is worth \$30,000. That’s \$360,000 a year. \
 A Pro Mapper, your 20K monthly ATTN is worth \$12,000. That’s \$144,000 a year. \
