Documentation edits made through Mintlify web editor

--- a/guides/liquidity.mdx
+++ b/guides/liquidity.mdx
@@ -1,17 +1,13 @@
 ---
 title: "How ATTN Price Works;  Understanding liquidity and pools."
-description: "ATTN powers the Collective Memory ecosystem. Its price isn’t set by hidden factors - it’s determined automatically by the liquidity in ATTN pools.  When users, investors, licensors, or advertisers buy ATTN to use within the platform, they add liquidity, and the price rises. In other words, ATTN’s price reflects the value created in Collective Memory: the memories, the usage, and the attention they generate.on of your new file.
-
-It’s simple:
-
-More meaningful Memories → More user attention → More value for investors, advertisers, and AI data consumers → They buy ATTN to participate → ATTN rises → Creators and Stakers earn more → the flywheel spins."
+description: "ATTN powers the Collective Memory ecosystem. Its price isn’t set by hidden factors - it’s determined automatically by the liquidity in ATTN pools.  When users, investors, licensors, or advertisers buy ATTN to use within the platform, they add liquidity, and the price rises. In other words, ATTN’s price reflects the value created in Collective Memory: the memories, the usage, and the attention they generate.on of your new file. It’s simple: More meaningful Memories → More user attention → More value for investors, advertisers, and AI data consumers → They buy ATTN to participate → ATTN rises → Creators and Stakers earn more → the flywheel spins."
 ---
 
 ## 
 
 ## **What are liquidity pools?**
 
-A liquidity pool is a shared reserve of tokens that allows people to trade instantly. The pool already holds both sides of the trade (for example, ATTN and USDC) so users can swap one token for another at any time. 
+A liquidity pool is a shared reserve of tokens that allows people to trade instantly. The pool already holds both sides of the trade (for example, ATTN and USDC) so users can swap one token for another at any time.
 
 ## **How the Pools Shape Price**
 
@@ -42,22 +38,19 @@ Whenever someone adds a significant amount of liquidity - usually by making a la
 
 ![standard liquidity notification.png](/images/standardliquiditynotification.png)
 
-## **\
-Why Growing Collective Memory Helps Price**
+## Why Growing Collective Memory Helps Price
 
 The more attention the platform attracts, the more valuable ATTN becomes. More users add more Memories. More Memories lead to more staking and more creator activity. That, in turn, attracts advertisers and AI partners - both of whom must buy ATTN to participate. Their buying adds liquidity to the pools, naturally pushing the price upward.
 
 This isn’t a pump cycle. It’s a usage cycle. The healthier the platform becomes, the more demand flows into ATTN.
 
-## **\
-A Long-Term, Transparent System**
+## A Long-Term, Transparent System
 
 ATTN is built for long-term participation. As more Memories are posted, more ATTN is staked, more advertisers join, and more AI licensing occurs, the market continuously adjusts the token’s price based on real demand.
 
 > ## There are no shortcuts or artificial mechanisms. ATTN’s price simply reflects the growth and activity of the ecosystem around it.
 
-## \
-**Clear roadmap - we just need to execute together.**
+## **Clear roadmap - we just need to execute - together.**
 
 Our goals are simple: to make Collective Memory the most interesting, up-to-date platform for global awareness, capturing everything happening around the world, genuine and verified. We believe this data asset will become one of the most valuable information sources for both humans and AI. As we continue adding value through usage and high-quality information, investors, advertisers, and licensors will join - because they’ll need to.
 
@@ -67,8 +60,7 @@ At **\$50K liquidity**, ATTN is worth ~**\$0.01**\
 At **\$100K liquidity**, ATTN is worth ~**\$0.0125**\
 At **\$0.5M liquidity**, ATTN is worth ~**\$0.025**\
 At **\$1M liquidity**, ATTN is worth ~**\$0.05** (that’s **5×** the starting point!)\
-At **\$100M**, ATTN = ~**\$1 **(estimated)\
-At **\$1B**, ATTN = ~**\$10 **(estimated)
+At **\$100M**, ATTN = ~\*\*\$1 ****(estimated)At \$1B, ATTN = ~****\$10 \*\*(estimated)
 
 How much will the ATTN you hold be worth at each milestone?\
 **Let’s make it happen.**
