Documentation edits made through Mintlify web editor

--- a/guides/liquidity.mdx
+++ b/guides/liquidity.mdx
@@ -3,9 +3,10 @@ title: "How ATTN Price Works;  Understanding liquidity and pools."
 description: "ATTN powers the Collective Memory ecosystem. Its price isn’t set by hidden factors - it’s determined automatically by the liquidity in ATTN pools.  "
 ---
 
-## When users, investors, licensors, or advertisers buy ATTN to use within the platform, they add liquidity, and the price rises. In other words, ATTN’s price reflects the value created in Collective Memory: the memories, the usage, and the attention they generate.\
-\
- It’s simple: \
+## When users, investors, licensors, or advertisers buy ATTN to use within the platform, they add liquidity, and the price rises. In other words, ATTN’s price reflects the value created in Collective Memory: the memories, the usage, and the attention they generate.
+
+## \
+It’s simple: \
 \
 More meaningful Memories → More user attention → More value for investors, advertisers, and AI data consumers → They buy ATTN to participate → ATTN rises → Creators and Stakers earn more → the flywheel spins.
 
