--- a/guides/liquidity.mdx
+++ b/guides/liquidity.mdx
@@ -5,8 +5,9 @@ description: "ATTN powers the Collective Memory ecosystem. Its price isn’t set
 
 ## When users, investors, licensors, or advertisers buy ATTN to use within the platform, they add liquidity, and the price rises. In other words, ATTN’s price reflects the value created in Collective Memory: the memories, the usage, and the attention they generate.
 
-## \
-It’s simple: \
+## 
+
+## It’s simple: \
 \
 More meaningful Memories → More user attention → More value for investors, advertisers, and AI data consumers → They buy ATTN to participate → ATTN rises → Creators and Stakers earn more → the flywheel spins.
 
