--- a/guides/liquidity.mdx
+++ b/guides/liquidity.mdx
@@ -1,13 +1,8 @@
 ---
 title: "How ATTN Price Works;  Understanding liquidity and pools."
+description: "ATTN powers the Collective Memory ecosystem. Its price isn’t set by hidden factors - it’s determined automatically by the liquidity in ATTN pools. When users, investors, licensors, or advertisers buy ATTN to use within the platform, they add liquidity, and the price rises. In other words, ATTN’s price reflects the value created in Collective Memory: the memories, the usage, and the attention they generate."
 ---
 
-## ATTN powers the Collective Memory ecosystem. Its price isn’t set by hidden factors - it’s determined automatically by the liquidity in ATTN pools.  
-
-When users, investors, licensors, or advertisers buy ATTN to use within the platform, they add liquidity, and the price rises. In other words, ATTN’s price reflects the value created in Collective Memory: the memories, the usage, and the attention they generate.\
-\
-**It’s simple: \
-More meaningful Memories → More user attention → More value for investors, advertisers, and AI data consumers → They buy ATTN to participate → ATTN rises → Creators and Stakers earn more → the flywheel spins.**
 
 ## **What are liquidity pools?**
 
@@ -36,7 +31,11 @@ ATTN demand comes from actual activity in the ecosystem:
 
 Most of this demand comes from utility, not speculation.
 
-## **Keeping the Community Informed**
+> ## **It’s simple: \
+> More meaningful Memories → More user attention → More value for investors, advertisers, and AI data consumers → They buy ATTN to participate → ATTN rises → Creators and Stakers earn more → the flywheel spins.**
+
+## \
+**Keeping the Community Informed**
 
 Whenever someone adds a significant amount of liquidity - usually by making a large ATTN purchase - the community is notified. This helps everyone stay aware of major shifts in liquidity and reflects real interest from new participants. These updates are informational and neutral, not promotional.
 
