--- a/guides/liquidity.mdx
+++ b/guides/liquidity.mdx
@@ -3,7 +3,6 @@ title: "How ATTN Price Works;  Understanding liquidity and pools."
 description: "ATTN powers the Collective Memory ecosystem. Its price isn’t set by hidden factors - it’s determined automatically by the liquidity in ATTN pools. When users, investors, licensors, or advertisers buy ATTN to use within the platform, they add liquidity, and the price rises. In other words, ATTN’s price reflects the value created in Collective Memory: the memories, the usage, and the attention they generate."
 ---
 
-
 ## **What are liquidity pools?**
 
 A liquidity pool is a shared reserve of tokens that allows people to trade instantly. The pool already holds both sides of the trade (for example, ATTN and USDC) so users can swap one token for another at any time.
@@ -31,11 +30,13 @@ ATTN demand comes from actual activity in the ecosystem:
 
 Most of this demand comes from utility, not speculation.
 
-> ## **It’s simple: \
-> More meaningful Memories → More user attention → More value for investors, advertisers, and AI data consumers → They buy ATTN to participate → ATTN rises → Creators and Stakers earn more → the flywheel spins.**
+> ## It’s simple: 
+>
+> ## More meaningful Memories → More user attention → More value for investors, advertisers, and AI data consumers → They buy ATTN to participate → ATTN rises → Creators and Stakers earn more → the flywheel spins.
 
-## \
-**Keeping the Community Informed**
+## 
+
+## **Keeping the Community Informed**
 
 Whenever someone adds a significant amount of liquidity - usually by making a large ATTN purchase - the community is notified. This helps everyone stay aware of major shifts in liquidity and reflects real interest from new participants. These updates are informational and neutral, not promotional.
 
