--- a/guides/liquidity.mdx
+++ b/guides/liquidity.mdx
@@ -30,7 +30,7 @@ ATTN demand comes from actual activity in the ecosystem:
 
 Most of this demand comes from utility, not speculation.
 
-> ## It’s simple: 
+> ## It’s simple:
 >
 > ## More meaningful Memories → More user attention → More value for investors, advertisers, and AI data consumers → They buy ATTN to participate → ATTN rises → Creators and Stakers earn more → the flywheel spins.
 
@@ -64,7 +64,8 @@ At **\$50K liquidity**, ATTN is worth ~**\$0.01**\
 At **\$100K liquidity**, ATTN is worth ~**\$0.0125**\
 At **\$0.5M liquidity**, ATTN is worth ~**\$0.025**\
 At **\$1M liquidity**, ATTN is worth ~**\$0.05** (that’s **5×** the starting point!)\
-At **\$100M**, ATTN = ~\*\*\$1 ****(estimated)At \$1B, ATTN = ~****\$10 \*\*(estimated)
+At **\$100M**, ATTN = ~**\$1** (estimated)\
+At**\$1B** , ATTN =**~\$10 ** (estimated)
 
 How much will the ATTN you hold be worth at each milestone?\
 **Let’s make it happen.**
