Documentation edits made through Mintlify web editor

--- a/guides/liquidity.mdx
+++ b/guides/liquidity.mdx
@@ -64,8 +64,8 @@ At **\$50K liquidity**, ATTN is worth ~**\$0.01**\
 At **\$100K liquidity**, ATTN is worth ~**\$0.0125**\
 At **\$0.5M liquidity**, ATTN is worth ~**\$0.025**\
 At **\$1M liquidity**, ATTN is worth ~**\$0.05** (that’s **5×** the starting point!)\
-At **\$100M**, ATTN = ~**\$1** (estimated)\
-At**\$1B** , ATTN =**~\$10 ** (estimated)
+At **\$100M**, ATTN = \$1 (estimated)\
+At**\$1B, ** ATTN**= ** \$10 (estimated)
 
 How much will the ATTN you hold be worth at each milestone?\
 **Let’s make it happen.**
