Documentation edits made through Mintlify web editor

--- a/guides/bonus.mdx
+++ b/guides/bonus.mdx
@@ -3,21 +3,16 @@ title: "Announcing holiday ATTN Bonuses."
 description: "Throughout December, you can withdraw additional ATTN - not only based on your rank, but also on your individual performance in creating, investing, and bringing in new users. Happy holidays! 🙂"
 ---
 
-
-\
 We’re happy to share that during December, you’ll be able to withdraw more ATTN. Your bonus is calculated based on your activity across the three core motivations of Collective Memory: creating quality memories, investing early in attention-worthy memories, and inviting new users to the platform.
 
 If the total of your bonuses exceeds your rank’s standard withdrawal maximum, you’ll be able to withdraw the higher amount. \
 \
 Many users will now qualify for increased withdrawals.\
-You can check your bonuses at [<u>https://www.collectivememory.ai/bonus</u>](https://www.collectivememory.ai/bonus)\
-(just search for your nickname)\
+You can check your bonuses at [<u>https://www.collectivememory.ai/bonus</u>](https://www.collectivememory.ai/bonus)<u>, </u>just search for your nickname.\
 \
 Tip: Even at lower tiers, strong bonuses can unlock significantly higher withdrawal limits.
 
-**\
-How do we calculate your bonus?**\
-\
+**How do we calculate your bonus?**\
 Each user receives a personal bonus that increases their rank-based withdrawal limit. The bonus consists of three parts, each calculated based on your gains from the past 30 days:
 
 - **Creator Bonus:** 5% of your earnings as a creator, based on all creator revenues you have withdrawn.
@@ -26,16 +21,11 @@ Each user receives a personal bonus that increases their rank-based withdrawal l
 
 **Here are some examples:**
 
-[**<u>David</u>**](https://www.collectivememory.ai/user/kLZV9HSbsaZbUJBFhkF31sNIq6z1) is in the ‘Solid Mapper’ tier - Normally, he would withdraw 10,000 ATTN this month. Because he onboards many interesting users, he can withdraw 56,893 ATTN this month. 
-
+[**<u>David</u>**](https://www.collectivememory.ai/user/kLZV9HSbsaZbUJBFhkF31sNIq6z1) is in the ‘Solid Mapper’ tier - Normally, he would withdraw 10,000 ATTN this month. Because he onboards many interesting users, he can withdraw 56,893 ATTN this month. \
 \
+[**<u>Twanpitel</u>**](https://www.collectivememory.ai/user/0tDyI8EJDVWmabCPuEde9NEvMDo2) is also a Solid Mapper. Normally, he would withdraw 10,000 ATTN this month. Because he stakes on  good content and onboards interesting users, he can withdraw 56,893 ATTN this month! \
 \
-[**<u>Twanpitel</u>**](https://www.collectivememory.ai/user/0tDyI8EJDVWmabCPuEde9NEvMDo2) is also a Solid Mapper. Normally, he would withdraw 10,000 ATTN this month. Because he stakes on  good content and onboards interesting users, he can withdraw 56,893 ATTN this month! 
-
+[**<u>Jerome</u>**](https://www.collectivememory.ai/user/xo8W3jNQ1hcMAPu2BXVobyddIDX2) is a Top Mapper. Normally, he would withdraw 50,000 ATTN this month. Because he creates great content, stakes in great content, and brings great users, he can withdraw 77,042 ATTN this month! \
 \
-[**<u>Jerome</u>**](https://www.collectivememory.ai/user/xo8W3jNQ1hcMAPu2BXVobyddIDX2) is a Top Mapper. Normally, he would withdraw 50,000 ATTN this month. Because he creates great content, stakes in great content, and brings great users, he can withdraw 77,042 ATTN this month! 
-
-\
-**\
-Happy holidays!!! **\
-Collective Memory.
+Happy holidays!!! \
+Collective Memory
