Documentation edits made through Mintlify web editor

--- a/guides/bonus.mdx
+++ b/guides/bonus.mdx
@@ -10,7 +10,7 @@ If the total of your bonuses exceeds your rank’s standard withdrawal maximum, 
 Many users will now qualify for increased withdrawals.\
 You can check your bonuses at [<u>https://www.collectivememory.ai/bonus</u>](https://www.collectivememory.ai/bonus)<u>, </u>just search for your nickname.\
 \
-Tip: Even at lower tiers, strong bonuses can unlock significantly higher withdrawal limits.
+_Tip: Even at lower tiers, strong bonuses can unlock significantly higher withdrawal limits._
 
 **How do we calculate your bonus?**\
 Each user receives a personal bonus that increases their rank-based withdrawal limit. The bonus consists of three parts, each calculated based on your gains from the past 30 days:
