Documentation edits made through Mintlify web editor

--- a/guides/bonus.mdx
+++ b/guides/bonus.mdx
@@ -21,10 +21,10 @@ Each user receives a personal bonus that increases their rank-based withdrawal l
 
 **Here are some examples:**
 
-[**<u>David</u>**](https://www.collectivememory.ai/user/kLZV9HSbsaZbUJBFhkF31sNIq6z1) is in the ‘Solid Mapper’ tier - Normally, he would withdraw 10,000 ATTN this month. Because he onboards many interesting users, he can withdraw 56,893 ATTN this month. \
-\
-[**<u>Twanpitel</u>**](https://www.collectivememory.ai/user/0tDyI8EJDVWmabCPuEde9NEvMDo2) is also a Solid Mapper. Normally, he would withdraw 10,000 ATTN this month. Because he stakes on  good content and onboards interesting users, he can withdraw 40,783 ATTN this month! \
-\
+[**<u>David</u>**](https://www.collectivememory.ai/user/kLZV9HSbsaZbUJBFhkF31sNIq6z1) is in the ‘Solid Mapper’ tier - Normally, he would withdraw 10,000 ATTN this month. Because he onboards many interesting users, he can withdraw 56,893 ATTN this month. 
+
+[**<u>Twanpitel</u>**](https://www.collectivememory.ai/user/0tDyI8EJDVWmabCPuEde9NEvMDo2) is also a Solid Mapper. Normally, he would withdraw 10,000 ATTN this month. Because he stakes on  good content and onboards interesting users, he can withdraw 40,783 ATTN this month! 
+
 [**<u>Jerome</u>**](https://www.collectivememory.ai/user/xo8W3jNQ1hcMAPu2BXVobyddIDX2) is a Top Mapper. Normally, he would withdraw 50,000 ATTN this month. Because he creates great content, stakes in great content, and brings great users, he can withdraw 77,042 ATTN this month! \
 \
 Happy holidays!!! \
